# colibri

./: .gitignore  README.md
c/: coli  glm.c  iobench.c  olmoe.c  setup.sh  st.h
c/tools/: benchmark_cuda_fixture.py  convert_fp8_to_int4.py  eval_glm.py  fetch_benchmarks.py  make_glm_oracle.py
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
web/: README.md
web/src/: App.tsx  index.css
web/src/lib/: api.test.ts  api.ts  storage.test.ts  storage.ts
