[package]
name = "colibri-desktop"
version = "0.1.0"
description = "Native desktop shell for the colibri inference engine"
authors = ["colibri contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "colibri_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
